2013-11-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (neug_setup_endpoints_for_interface): Fix for ENDP2.

2013-11-06  Niibe Yutaka  <gniibe@fsij.org>

	* fraucheky: New submodule.
	* .gitignore: Add generated files by Fraucheky.
	* NEUG_USB_DEVICE_ID: Add USB id of Fraucheky.
	* src/Makefile.in, src/config.h.in, src/configure: Support
	Fraucheky.
	*src/main.c: Likewise.

	* vender/flying-stone-technology: New.

2013-11-05  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: New file.

	* src/configure (SERIALNO, SERIALNO_STR_LEN_DEFINE): New.
	(REVISION): Use the file VERSION if it doesn't have .git.
	* src/config.h.in (SERIALNO_STR_LEN_DEFINE): New.
	* src/main.c (vcom_string3): Removed.
	(ID_OFFSET): New, using SERIALNO_STR_LEN.

2013-11-03  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.01.

2013-11-02  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update.
	* src/sys.c, src/usb_lld.h, src/usb_stm32f103.c: Update from
	Chopstx.
	* src/main.c (usb_cb_get_descriptor): Follow the change.

2013-10-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (usb_cb_setup): Signal CND_USB, so that
	neug_upgrade.py works better.

2013-08-22  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.11.

2013-08-21  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.00 release of Chopstx.

2013-08-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (options): Add --enable-sys1-compat.

2013-08-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.h: Remove extern from function prototypes.

	* src/main.c (vcom_string3): Updated.
	[DFU_SUPPORT] (main): Fix calling flash_erase_all_and_exec.

	* src/neug.c (repetition_count_test_word)
	(adaptive_proportion_64_test_word)
	(adaptive_proportion_4096_test_word)
	(noise_source_continuous_test_word): New.
	(ep_fill_wbuf_v): Use noise_source_continuous_test_word.

2013-08-17  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Fix locking of USB_MTX.

	* src/adc_stm32f103.c (adc_wait_completion): Fix race condition.